Remove justification and fix overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,9 +15,8 @@ a:hover,
 a:visited,
 a:link
 {
-    text-decoration: none;
-
     color: #526d7a;
+    word-break: break-word;
 }
 body
 {
